fixed text wrap issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,11 @@ html, body {
 }
 
 div {
+	background: green;
 	margin-top: 4px;
 	margin-bottom: 4px;
+	/* this stops line w/prevCmd from breaking and stacking on a \n */
+	white-space: nowrap;
 }
 
 #container {
